@@ -5,3 +5,8 @@ A javafx ui for Sqlg.
 Primarily to manage Sqlg's topology. 
 
 `Schema`, `VertexLabel`, `EdgeLabel`, `PropertyColumn`, `Partition`, `Index`
+
+#Start application with,
+```
+java -jar --enable-preview sqlgfx-1.0.0-SNAPSHOT.jar
+```
